# forum-saver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
forum-saver/: Cargo.toml
forum-saver/resources/: config_sample.toml
forum-saver/resources/i18n/: en-US.ftl  zh-CN.ftl
forum-saver/resources/js/: nga_patch.js  nga_smiles.json
forum-saver/src/: cli.rs  error.rs  lib.rs  main.rs  utils.rs
forum-saver/src/core/: auth.rs  downloader.rs  forum.rs  mod.rs  types.rs
forum-saver/src/forums/: discuz.rs  nga.rs  v2ex.rs
resources/js/: nga_patch.js
src/: cli.rs  i18n.rs  main.rs  utils.rs
src/core/: downloader.rs  forum.rs  mod.rs  types.rs
src/forums/: discuz.rs  mod.rs  nga.rs
tauri-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
tauri-app/src/: App.vue  components.d.ts  main.ts  schemas.ts  types.ts  update.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/components/: AuthMethodEditor.vue  DynamicForm.vue  EnumSelect.vue  ForumConfigEditor.vue
tauri-app/src/views/: ConfigView.vue  DownloadView.vue
