[package]
name = "forum-saver"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
dirs = "5.0.1"
futures-util = "0.3.32"
indicatif = "0.17.8"
hex = "0.4.3"
kuchiki = "0.8.1"
lazy_static = "1.5.0"
pathdiff = "0.2.3"
percent-encoding = "2.3.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "form"] }
rookie = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
anyhow = "1.0.102"
toml = "1.0.6"
log = "0.4.29"
env_logger = "0.11.9"
chrono = "0.4.44"
clap = { version = "4.5.4", features = ["derive"] }
fluent = "0.16.0"
fluent-syntax = "0.11.0"
fluent-bundle = "0.15.0"
intl-memoizer = "0.5.1"
intl_pluralrules = "7.0.0"
locale = "0.2.2"
once_cell = "1.19.0"
unic-langid = { version = "0.9.6", features = ["unic-langid-macros"] }
sys-locale = "0.3.2"
encoding_rs = "0.8.33"
clap-cargo = "0.18.3"

[profile.release]
lto = true        # Enables link to optimizations
strip = true      # Remove debug symbols
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
panic = "abort"   # Strip expensive panic clean-up logic
opt-level = "s"     # Optimize for binary size
