[workspace]
members = [
    "forum-saver",         # Core library + CLI
    "tauri-app/src-tauri", # GUI with Tauri
]
resolver = "2"

[workspace.package]
version = "0.2.0"          # 共享版本号
authors = ["shuangluoxss"]
edition = "2024"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
