[package]
name = "tauri-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A Tauri App for forum-saver, which is a tool to download thread from forum and make all resources localized."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forum_saver_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
forum-saver = { path = "../../forum-saver" }
tauri-plugin-fs = "2"
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-process = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
